sfdx-source/force-app/main/default/objects/SBQQ__SearchFilter__c/fields/DD_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DD_External_ID__c</fullName>
    <description>LEM-936: Setup of External ID field.</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID for migration purposes</inlineHelpText>
    <label>DD_External_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>