sfdx-source/force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__TargetField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TargetField__c</fullName>
    <description>Field searched by this filter.</description>
    <inlineHelpText>Specify the field to search.</inlineHelpText>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__TargetObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Product Code</fullName>
            </value>
            <value>
                <fullName>Product Family</fullName>
            </value>
            <value>
                <fullName>Product Description</fullName>
            </value>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Product_Visibility__c</fullName>
            </value>
            <value>
                <fullName>Applicable_Segment__c</fullName>
            </value>
            <value>
                <fullName>Applicable_Countries__c</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>